<resources>
    <string name="app_name">CameraXApp</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="Sign_in">Sign In</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Present_Or_Not">Present or NOT!</string>
    <string name="Capture">CapturE</string>
    <string name="Welcome_Back">Welcome Back!</string>
    <string name="Email_address">Email Address</string>
    <string name="Password">Password</string>
    <string name="Temporary">Temporary</string>
    <string name="History">History</string>
    <string name="Register_Faces">Register Faces</string>
    <string name="Capture_Attendance">Attendance</string>
    <string name="more">more</string>

</resources>